@@ -1,3 +1,8 @@
+2002-01-21  Alex Larsson  <alexl@redhat.com>
+
+	* rsvg.c (rsvg_render_bpath):
+	Use the new libart intersector.
+
 ==== librsvg 1.1.1 ====
 
 2002-01-08  Darin Adler  <darin@bentspoon.com>
